--- a/react-exam-quiz-game/package.json
+++ b/react-exam-quiz-game/package.json
@@ -46,9 +46,11 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "uuid": "^10.0.0"
   }
 }
